--- a/QRCODE/index.html
+++ b/QRCODE/index.html
@@ -10,7 +10,7 @@
 
  <div class="container">
   <div class="image">
-    <img src="./image-qr-code.png"class="race">
+    <img src="image-qr-code.png"class="race">
   </div>
   <div>
     <span class="peter">Improve your front-end skills by building projects</span>
